<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PasswordVault</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_password_vault">Password Vault</string>
    <string name="password_image">Password Image</string>
    <string name="toast_display_after_point_touched">Recognized a point touch on the screen</string>
    <string name="storing_pass_points">Storing Pass points</string>
    <string name="title_activity_pass_save_and_retrieve">PassSaveAndRetrieveActivity</string>
    <string name="save_password">Save Password</string>
    <string name="retrieve_password">Retrieve Password</string>
    <string name="title_activity_retreive_password">RetreivePassword</string>
    <string name="title_activity_save_password">SavePassword</string>
    <string name="site_name">Site Name :</string>
    <string name="submit">Submit</string>
    <string name="enter_your_site_name">Enter your site name</string>
    <string name="lock">LOCK</string>
    <string name="password">Password</string>
    <string name="description">Description</string>
    <string name="enter_site_keyword">Enter site keyword</string>
    <string name="store_password">Storing Password</string>

</resources>
